# ipython-file-upload

./: .eslintrc  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py
fileupload/: __init__.py  widget.py
fileupload/static/: extension.js  widget.js
fileupload/static/fileupload/: widget.js
