[metadata]
name = fileupload
author = Alain Péteut
author-email = alain.peteut@yahoo.com
home-page = https://github.com/peteut/ipython-file-upload
description = README.rst
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[files]
packages = fileupload
